--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -47,9 +47,11 @@
                             <ProgressBar Value="50"></ProgressBar>
                             <Separator Height="12"></Separator>
                             <Image
-                                Width="90" Height="90"
-                                Source="resm:AutomatedCar.Assets.steering-wheel.png?assembly=AutomatedCar"
-                                RenderTransformOrigin="{Binding RotationPoint, Converter={x:Static visualization:RenderTransformOriginTransformer.Instance}}">
+                  Width="90" Height="90"
+                  Source="resm:AutomatedCar.Assets.steering-wheel.png?assembly=AutomatedCar">
+                                <Image.RenderTransform>
+                                  <RotateTransform Angle="{Binding Car.VirtualFunctionBus.SteeringWheelPacket.State}"/>
+                                </Image.RenderTransform>
                             </Image>
                             <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
                                 <TextBlock Grid.Row="0" Grid.Column="0">X:</TextBlock>
