--- a/src/AutomatedCar/Views/DashboardView.xaml
+++ b/src/AutomatedCar/Views/DashboardView.xaml
@@ -53,7 +53,7 @@
                                   <RotateTransform Angle="{Binding Car.VirtualFunctionBus.SteeringWheelPacket.SteeringWheelState}"/>
                                 </Image.RenderTransform>
                             </Image>
-                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
+                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
                                 <TextBlock Grid.Row="0" Grid.Column="0">X:</TextBlock>
                                 <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding X}"/>
 								
@@ -74,6 +74,12 @@
 
                                 <TextBlock Grid.Row="6" Grid.Column="0">A(m/sec^2): </TextBlock>
                                 <TextBlock Grid.Row="6" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.Powertrain.Acceleration_Dashboard}"/>
+
+                                <TextBlock Grid.Row="7" Grid.Column="0">Throttle: </TextBlock>
+                                <TextBlock Grid.Row="7" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.Powertrain.Throttle_Dashboard}"/>
+
+                                <TextBlock Grid.Row="8" Grid.Column="0">Brake:  </TextBlock>
+                                <TextBlock Grid.Row="8" Grid.Column="1" Text="{Binding Car.VirtualFunctionBus.Powertrain.Brake_Dashboard}"/>
                             </Grid>
                         </StackPanel>
                     </DataTemplate>
